--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,10 @@ knitr::opts_chunk$set(
 # boostmath
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/andrjohns/boostmath/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/andrjohns/boostmath/actions/workflows/R-CMD-check.yaml)
+[![CRAN status](https://www.r-pkg.org/badges/version/boostmath)](https://CRAN.R-project.org/package=boostmath)
+[![Downloads](https://cranlogs.r-pkg.org/badges/boostmath?color=blue)](https://CRAN.R-project.org/package=boostmath)
+[![boostmath status badge](https://andrjohns.r-universe.dev/badges/boostmath)](https://andrjohns.r-universe.dev/boostmath)
 <!-- badges: end -->
 
 Providing simple access to Boost's Math functions in R, no compilation required.
@@ -24,12 +28,19 @@ Providing simple access to Boost's Math functions in R, no compilation required.
 
 You can install the development version of boostmath from [GitHub](https://github.com/) with:
 
-``` r
-# install.packages("pak")
-pak::pak("andrjohns/boostmath")
+```{r, eval=FALSE}
+# install.packages("remotes")
+remotes::install_github("andrjohns/boostmath")
 ```
 
-## Example
+Or you can install pre-built binaries from R-Universe:
+
+```{r, eval=FALSE}
+install.packages("boostmath", repos = c("https://andrjohns.r-universe.dev",
+                                        "https://cran.r-project.org"))
+```
+
+## Usage
 
 Functions can be used directly after loading the package:
 
