--- a/vignettes/boost-math.Rmd
+++ b/vignettes/boost-math.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Boost Math: Special Functions"
+title: "Boost Math"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Boost Math: Special Functions}
+  %\VignetteIndexEntry{Boost Math}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 library(boostmath)
 ```
 
-## Using Boost's Special Math Functions
+## Special Math Functions
 
 The [Special Functions](https://www.boost.org/doc/libs/1_85_0/libs/math/doc/html/special.html) section of the Boost Math library cover a broad range of areas:
 
@@ -48,4 +48,22 @@ These are all exposed for direct use in `boostmath` without needing any addition
 hypergeometric_pFq(c(1, 2.5), c(0.5, 2), 1)
 ibeta_inv(2.1, 5.2, 0.7)
 owens_t(2.1, 4.2)
+```
+
+## Quadrature and Differentiation
+
+Boost's integration and (numerical) differentiation routines are also available for use with R functions:
+
+```{r}
+trapezoidal(\(x) { 1/(5 - 4*cos(x)) }, a = 0, b = 2*pi)
+
+gauss_legendre(\(x) { x * x * atan(x) }, a = 0, b = 1, points = 20)
+
+gauss_kronrod(\(x) { exp(-x * x / 2) }, a = 0, b = Inf, points = 15)
+
+tanh_sinh(\(x) { log(x)*log1p(-x) }, a = 0, b = 1)
+
+sinh_sinh(\(x) { exp(-x*x) })
+
+exp_sinh(\(x) { exp(-3*x) }, a = 0, b = Inf)
 ```
