Restructure, finite-diff

--- a/README.Rmd
+++ b/README.Rmd
@@ -59,20 +59,30 @@ beta_boost(3, 2)
 lgamma_boost(5)
 ```
 
-### Quadrature and Differentiation
+## Quadrature and Differentiation
 
-Boost's integration and (numerical) differentiation routines are also available for use with R functions:
+Boost's integration routines are also available for use with R functions:
 
 ```{r}
-trapezoidal(\(x) { 1/(5 - 4*cos(x)) }, a = 0, b = 2*pi)
+trapezoidal(function(x) { 1/(5 - 4*cos(x)) }, a = 0, b = 2*pi)
 
-gauss_legendre(\(x) { x * x * atan(x) }, a = 0, b = 1, points = 20)
+gauss_legendre(function(x) { x * x * atan(x) }, a = 0, b = 1, points = 20)
 
-gauss_kronrod(\(x) { exp(-x * x / 2) }, a = 0, b = Inf, points = 15)
+gauss_kronrod(function(x) { exp(-x * x / 2) }, a = 0, b = Inf, points = 15)
 
-tanh_sinh(\(x) { log(x)*log1p(-x) }, a = 0, b = 1)
+tanh_sinh(function(x) { log(x)*log1p(-x) }, a = 0, b = 1)
 
-sinh_sinh(\(x) { exp(-x*x) })
+sinh_sinh(function(x) { exp(-x*x) })
 
-exp_sinh(\(x) { exp(-3*x) }, a = 0, b = Inf)
+exp_sinh(function(x) { exp(-3*x) }, a = 0, b = Inf)
+
+ooura_fourier_sin(function(x) { 1 / x})
+
+ooura_fourier_cos(function(x) { 1 / (x * x + 1)})
+```
+
+As well as numerical differentiation by finite-differences:
+
+```{r}
+finite_difference_derivative(exp, 1.7)
 ```
