Start statistical distributions

--- a/vignettes/boost-math.Rmd
+++ b/vignettes/boost-math.Rmd
@@ -78,3 +78,19 @@ As well as numerical differentiation by finite-differences:
 finite_difference_derivative(exp, 1.7)
 ```
 
+## Distribution Functions
+
+The PDF, CDF, log-PDF, log-CDF, and quantile functions for statistical distributions are also exposed:
+
+```{r}
+beta_pdf(0.1, 1.2, 2.1)
+
+beta_lpdf(0.1, 1.2, 2.1)
+
+beta_cdf(0.1, 1.2, 2.1)
+
+beta_lcdf(0.1, 1.2, 2.1)
+
+beta_quantile(0.5, 1.2, 2.1)
+```
+
