--- a/vignettes/boost-math.Rmd
+++ b/vignettes/boost-math.Rmd
@@ -60,12 +60,19 @@ trapezoidal(function(x) { 1/(5 - 4*cos(x)) }, a = 0, b = 2*pi)
 gauss_legendre(function(x) { x * x * atan(x) }, a = 0, b = 1, points = 20)
 
 gauss_kronrod(function(x) { exp(-x * x / 2) }, a = 0, b = Inf, points = 15)
+
+tanh_sinh(function(x) { log(x) * log1p(-x) }, a = 0, b = 1)
+
+sinh_sinh(function(x) { exp(-x * x) })
+
+exp_sinh(function(x) { exp(-3 * x) }, a = 0, b = Inf)
 ```
 
 As well as numerical differentiation by finite-differencing or the complex-step method:
 
 ```{r}
 finite_difference_derivative(exp, 1.7)
+
 complex_step_derivative(exp, 1.7)
 ```
 
